sg_web.tf
resource "aws_security_group" "mysg" {
  name = "web-server-sg"
  
  ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 443
      to_port = 443
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["${var.office_ip}"]
  }

  ingress {
      from_port = 21
      to_port = 21
      protocol = "tcp"
      cidr_blocks = ["${var.office_ip}"]
  }

  ingress {
      from_port = 25
      to_port = 25
      protocol = "tcp"
      cidr_blocks = ["${var.office_ip}"]
  }

  ingress {
      from_port = 25
      to_port = 25
      protocol = "tcp"
      cidr_blocks = ["${var.home_ip}"]
  }
}
